Update and document api/assign, and introduce hotcrapi assign
