# src/api/api_assign.php
@@ -1,30 +1,108 @@
 <?php
 // api_assign.php -- HotCRP assignment API calls
-// Copyright (c) 2008-2022 Eddie Kohler; see LICENSE.
+// Copyright (c) 2008-2025 Eddie Kohler; see LICENSE.
 
 class Assign_API {
     static function assign(Contact $user, Qrequest $qreq, ?PaperInfo $prow) {
-        if (!isset($qreq->assignments)) {
-            return JsonResult::make_missing_error("assignments");
+        $aset = new AssignmentSet($user);
+        if (friendly_boolean($qreq->forceShow) !== false) {
+            $aset->set_override_conflicts(true);
         }
-        $a = json_decode($qreq->assignments);
-        if (!is_array($a)) {
-            return JsonResult::make_parameter_error("assignments");
-        }
-
-        $aset = (new AssignmentSet($user))->set_override_conflicts(true);
         if ($prow) {
             $aset->enable_papers($prow);
         }
-        $aset->parse(CsvParser::make_json($a));
-        $aset->execute();
+
+        // obtain assignments
+        $ct = $qreq->body_content_type();
+        $ct_form = Mimetype::is_form($ct);
+
+        // check for uploaded file
+        if ($ct_form && isset($qreq->upload)) {
+            $updoc = DocumentInfo::make_capability($user->conf, $qreq->upload);
+            if (!$updoc) {
+                return JsonResult::make_missing_error("upload", "<0>Upload not found");
+            }
+            $ct = $updoc->mimetype;
+            $ct_form = false;
+        } else {
+            $updoc = null;
+        }
+
+        // parse CSV upload or get JSON string
+        $csvp = $jsonstr = $jsonfn = null;
+        $jsonparam = null;
+        if ($ct === "application/json") {
+            if ($updoc) {
+                $jsonstr = $updoc->content();
+                $jsonfn = $updoc->filename;
+            } else {
+                $jsonstr = $qreq->body();
+            }
+        } else if ($ct === "text/csv" || $ct === "text/plain") {
+            $fn = $updoc ? $updoc->content_file() : $qreq->body_file();
+            $csvp = new CsvParser;
+            $csvp->set_content(fopen($fn, "rb"));
+            $aset->set_csv_context(true);
+        } else if (isset($qreq->assignments)) {
+            $jsonstr = $qreq->assignments;
+            $jsonparam = "assignments";
+        }
+
+        // parse JSON string
+        if ($csvp === null) {
+            if ($jsonstr === null || $jsonstr === false) {
+                return JsonResult::make_missing_error("assignments");
+            }
+            $j = json_decode($jsonstr);
+            if (!$j) {
+                $jparser = (new JsonParser($jsonstr))->set_filename($jsonfn);
+                if (friendly_boolean($qreq->json5)) {
+                    $jparser->set_flags(JsonParser::JSON5);
+                }
+                $j = $jparser->decode();
+                if ($jparser->last_error()) {
+                    return JsonResult::make_message_list(MessageItem::error_at($jsonparam, "<0>Invalid JSON: " . $jparser->last_error_msg()));
+                }
+            }
+            if (is_object($j)) {
+                $j = [$j];
+            } else if (!is_array($j)) {
+                return JsonResult::make_message_list(MessageItem::error_at($jsonparam, "<0>Expected JSON array"));
+            }
+            $csvp = CsvParser::make_json($j);
+        }
+
+        // parse assignments; perform them unless dry run
+        $aset->parse($csvp);
+
+        $dry_run = friendly_boolean($qreq->dry_run);
+        $quiet = friendly_boolean($qreq->quiet);
+        $summary = friendly_boolean($qreq->summary);
+
+        if (!$dry_run) {
+            $aset->execute();
+        }
 
         $jr = $aset->json_result();
-        if ($jr["ok"] && $qreq->search) {
+        if ($dry_run) {
+            $jr->set("dry_run", true);
+        }
+        $jr->set("valid", !$aset->has_error());
+        if ($quiet || (!$dry_run && $aset->has_error())) {
+            // no additional information
+        } else if ($summary) {
+            $jr->set("assignment_actions", $aset->assigned_types());
+            $jr->set("assignment_pids", $aset->assigned_pids());
+        } else {
+            $acsv = $aset->make_acsv();
+            $jr->set("assignments_header", $acsv->header());
+            $jr->set("assignments", $acsv->rows());
+        }
+        if (!$dry_run && !$aset->has_error() && $qreq->search) {
             Search_API::apply_search($jr, $user, $qreq, $qreq->search);
             // include tag information
-            if (($p = self::assigned_paper_info($user, $aset))) {
-                $jr["p"] = $p;
+            if (($ps = self::assigned_paper_info($user, $aset))) {
+                $jr->set("papers", $ps);
             }
         }
         return $jr;
@@ -42,7 +120,8 @@ class Assign_API {
         }
         $p = [];
         foreach ($user->paper_set(["paperId" => array_keys($pids)]) as $pr) {
-            $p[$pr->paperId] = $tmr = new TagMessageReport;
+            $p[] = $tmr = new TagMessageReport;
+            $tmr->pid = $pr->paperId;
             $pr->add_tag_info_json($tmr, $user);
             if (($pids[$pr->paperId] & 2) !== 0) {
                 list($class, $name) = $pr->status_class_and_name($user);
